--- a/index.html
+++ b/index.html
@@ -17,28 +17,29 @@
             <input type="text">
         </div>
         <div class="result-display"></div>
-        <div class="numbers">
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
-            <button class="all-clear">AC</button>
-            <button class="number">0</button>
-            <button>.</button>
+        <div class="buttons">
+            <div class="numbers">
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
+                <button class="all-clear">AC</button>
+                <button class="number">0</button>
+                <button>.</button>
+            </div>
+            <div class="operators">
+                <button class="operator">+</button>
+                <button class="operator">-</button>
+                <button class="operator">x</button>
+                <button class="operator">/</button>
+                <button class="operator equal">=</button>
+            </div>
         </div>
-        <div class="operators">
-            <button class="operator">+</button>
-            <button class="operator">-</button>
-            <button class="operator">x</button>
-            <button class="operator">/</button>
-            <button class="operator">=</button>
-        </div>
-
     </div>
 
 </body>
