--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
 <body>
     <script type="text/javascript" src="scripts/script.js" defer></script>
-    <div class="calc-containter">
-        <div class="input-display">
-            <input type="text">
+    <div class="calc-container">
+        <div class="display">
+            <div class="input"></div>
+            <div class="result">0</div>
+
         </div>
-        <div class="result-display"></div>
         <div class="buttons">
             <div class="numbers">
                 <button class="number">7</button>
@@ -28,7 +29,7 @@
                 <button class="number">1</button>
                 <button class="number">2</button>
                 <button class="number">3</button>
-                <button class="all-clear">AC</button>
+                <button class="all-clear">C</button>
                 <button class="number">0</button>
                 <button>.</button>
             </div>
@@ -36,7 +37,7 @@
                 <button class="operator">+</button>
                 <button class="operator">-</button>
                 <button class="operator">x</button>
-                <button class="operator">/</button>
+                <button class="operator">&divide;</button>
                 <button class="operator equal">=</button>
             </div>
         </div>
